--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -10,11 +10,16 @@ order: 1
   <div id="fade">
   </br>
   </br>
-  <p style="font-size:40px">Hi there! I'm <strong>Sitong An</strong>.</p> 
-<p >I am an incoming <strong>Marie Curie Fellow</strong> at <strong>CERN</strong>, associated with the <a href="https://www.insights-itn.eu/">INSIGHTS ITN</a>.</p>
-  <p>I will be working to bring the lastest developments in <strong>Machine Learning</strong> to <strong>Particle Physics Experiments</strong>, in preparation for the upgrade to the <strong>HL-LHC</strong>.</p>
-  <p>This is my personal website. It is still under construction. </p>
-  <p>Come back soon to check out my journey to <strong>Accerlerate Science</strong>.</p>
+  <h3>Hi there! I'm <strong>Sitong An</strong>.</h3> </br>
+<p>I am an incoming <strong>Marie Curie Fellow</strong> at <strong>CERN</strong>, associated with the <a href="https://www.insights-itn.eu/">INSIGHTS ITN</a>.</p>
+  <p>I am working to bring the lastest developments in <strong>Machine Learning</strong> to <strong>Particle Physics Experiments</strong>, in preparation for the upgrade to the <strong>HL-LHC</strong>.</p>
+  <p>Scroll down to check out my journey to <strong>Accelerate Science</strong>. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<span class="container">
+  <span class="chevron"></span>
+  <span class="chevron"></span>
+  <span class="chevron"></span>
+</span>
+</p>
   </br>
   </br>
  </div>
