hide header, format about me

--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,15 +1,28 @@
 ---
 title: About Me
 icon: fa-user
-order: 3
-hide: true
+order: 2
+hide: false
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
 
-<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
+<div class="row">
+<div class="1.5u 12u$(mobile)" style="margin-left:160px;">
+<div class="item" style="width: 250px;">
+   <img style="width: 100%; border: 1px solid #ddd; border-radius: 4px;" src="assets/images/Profile_cms.jpeg">
+   <header>
+     <h3>At CMS Experimental Cavern</h3>
+   </header>
+</div>
+</div>
+<div class="6u 12u$(mobile)" style="margin-left:10px;">
+<div class="item">
+Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
 laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
 parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
 dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-ornare iaculis.</p>
+ornare iaculis.
+</div>
+</div>
+</div>
