--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,20 +1,20 @@
 ---
-title: Intro
+title: Welcome
 cover-photo: assets/images/cover.jpg
 cover-photo-alt: CMS Detector at CERN
 auto-header: none
-icon: fa-comment
+icon: fa-grin
 order: 1
 ---
 <header>
   <div id="fade">
   </br>
   </br>
-  <h3>Hi there! I'm <strong>Sitong An</strong>.</h3> </br>
-<p>I am an incoming <strong>Marie Curie Fellow</strong> at <strong>CERN</strong>, associated with the <a href="https://www.insights-itn.eu/">INSIGHTS ITN</a>.</p>
-  <p>I am working to bring the lastest developments in <strong>Machine Learning</strong> to <strong>Particle Physics Experiments</strong>, in preparation for the upgrade to the <strong>HL-LHC</strong>.</p>
-  <p>Scroll down to check out my journey to <strong>Accelerate Science</strong>. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<span class="container">
+  <p style="font-size:40px">Hi there! I'm <strong>Sitong An</strong>.</p>
+<p >I'm a <strong>Marie Curie Fellow</strong> at <strong>CERN</strong>, associated with the <a href="https://www.insights-itn.eu/">INSIGHTS ITN</a>.</p>
+  <p>I'm working to bring the lastest developments in <strong>Machine Learning</strong> to <strong>Particle Physics Experiments</strong>, </br> in preparation for the upgrade to the <strong>HL-LHC</strong>.</p>
+  <p>Scroll down to check out my journey to <strong>Accelerate Science</strong>.
+<span class="container" style="position:relative; top: -5px;">
   <span class="chevron"></span>
   <span class="chevron"></span>
   <span class="chevron"></span>
