--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,8 +1,8 @@
 ---
 title: Portfolio
 icon: fa-th
-order: 2
-hide: true
+order: 3
+hide: false
 ---
 
 <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
