finish who-am-i

--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -13,7 +13,7 @@ order: 1
   <p style="font-size:40px">Hi there! I'm <strong>Sitong An</strong>.</p>
 <p >I'm a <strong>Marie Curie Fellow</strong> at <strong>CERN</strong>, associated with the <a href="https://www.insights-itn.eu/">INSIGHTS ITN</a>.</p>
   <p>I'm working to bring the lastest developments in <strong>Machine Learning</strong> to <strong>Particle Physics Experiments</strong>, </br> in preparation for the upgrade to the <strong>HL-LHC</strong>.</p>
-  <p>Scroll down to check out my journey to <strong>Accelerate Science</strong>.
+  <p>Scroll down to learn more about my journey to <strong>Accelerate Science</strong>.
 <span class="container" style="position:relative; top: -5px;">
   <span class="chevron"></span>
   <span class="chevron"></span>
