--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -1,5 +1,5 @@
 ---
-title: About Me
+title: Who am I
 icon: fa-user
 order: 2
 hide: false
@@ -15,14 +15,17 @@ hide: false
    </header>
 </div>
 </div>
-<div class="6u 12u$(mobile)" style="margin-left:10px;">
+<div class="7u 12u$(mobile)" style="margin-left:10px;">
 <div class="item">
-Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-ornare iaculis.
+
+<p style="display: inline; font-weight: bold; font-size: 90%;">Hi there!</p> <p style="font-size:90%; display: inline;">I'm a <a href="https://ec.europa.eu/research/mariecurieactions/">Marie Curie Fellow</a> at <a href="https://home.cern/">CERN</a>, associated with the <a href="https://www.insights-itn.eu/">INSIGHTS ITN</a>. </br>
+I work on the investigation of novel Deep Learning algorithms </br> applied to Particle Physics Experiments, </br>
+as well as the development of <a href="https://root.cern/">ROOT/TMVA</a> in support of "ML for HEP" community. </br>
+I am also a first-year physics PhD student at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, </br>
+and a member of <a href="https://cms.cern">the CMS experiment</a> at CERN. </br>
+I was born in China, and educated in Singapore, the U.K. and the U.S. </br> I consider myself a citizen of the world. </br>
+I care about science communication, public engagement and reproducible research. </br>
+In my spare time I love travelling, hiking, photography and learning new languages.</br></p>
 </div>
 </div>
 </div>
