--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -1,8 +1,8 @@
 ---
 title: Portfolio
 icon: fa-th
-order: 3
-hide: false
+order: 6
+hide: true
 ---
 
 <p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
